# mdu

./: .coveragerc  .gitignore  LICENSE  README.md  _quarto.yml  _quartodoc.yml  pyproject.toml  test_manual.py
.github/workflows/: ci_testing.yml  publish-docs.yml  publish-pypi.yml
docs/: _sidebar.yml  custom.scss  index.qmd  styles.css
docs/api/: DataShapeError.qmd  ToFloatConverter.qmd  add_box_significance_indicator.qmd  add_cluster_permut_sig_to_plotly.qmd  add_meta_info.qmd  add_statsmodel_fit.qmd  create_plotly_grid_html.qmd  create_tabbed_plotly_grid_html.qmd  format_float_to_text_with_suffix.qmd  hex_to_rgba.qmd  index.qmd  inverse_map_events.qmd  mne_epochs_to_polars.qmd  mne_raw_to_polars.qmd  multiline_plot.qmd  plot_evoked.qmd  plot_roc_curve.qmd  plot_topo.qmd  plot_ts.qmd  set_template.qmd
docs/examples/: advanced_statistics.qmd  html_grids.qmd  index.qmd  mne_dataframe.qmd  mne_plotting.qmd  mne_topoplot.qmd  multiline_enhanced.qmd  statistical.qmd  time_series.qmd
docs/examples/_assets/: iris_dashboard.html  tips_dashboard.html
docs/guide/: contributing.qmd  installation.qmd  quickstart.qmd
examples/: resampler_example.py  test.py
src/mdu/cross_val/: chrono.py
tests/: test_cluster_permutation.py  test_converters.py  test_cross_val.py  test_events.py  test_forecasting.py  test_html_grids.py  test_logging.py  test_ml.py  test_mne2dataframe.py  test_mne_plotting.py  test_mne_plotting_utils_shared.py  test_plotly_shared.py  test_resampler_compat.py  test_residuals.py  test_significance_indicators.py  test_styling.py  test_template.py  test_time_series.py
(+29 files in other folders)
