[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdu"
version = "0.0.1"
authors = [{name="Matthias Dold", email="matthias.dold@gmx.de"}]
description = "Default utilities I use for electrophys analysis"
readme ="README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "mne>=1.11.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "loguru>=0.7.0",
    "polars>=1.38.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ipython>=8.38.0", "ruff"]
docs = ["quartodoc", "nbformat", "nbclient", "jupyter-cache", "ipykernel", "griffe<2.0.0"] # griffe<2.0.0 required for quartodoc
resampler = ["plotly-resampler"]
ml = ["scikit-learn>=1.0.0"]
dash = ["dash>=2.0.0", "PyYAML>=6.0.0"]
build = ["build", "twine"]
all = [
    "build",
    "twine", 
    "griffe<2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ipython>=8.38.0",
    "ruff",
    "quartodoc",
    "nbformat",
    "nbclient",
    "jupyter-cache",
    "ipykernel",
    "plotly-resampler",
    "scikit-learn>=1.0.0",
    "fire>=0.7.0",
    "dash>=2.0.0",
    "PyYAML>=6.0.0"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "./"
]
filterwarnings = ["ignore:::.*fire.core"]

# Adding e.g. custom css
[tool.setuptools.package-data]
mdu = ["*.txt"]
"mdu.mne.ica.assets" = ["*.css"]
